--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Vue.js Application</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <div id="app"></div>
