--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>{{ name }}</title>
+<title>template-vue</title>
 </head>
 <body>
 <div id="app"></div>
